@@ -1,5 +1,7 @@
 * SVN *
 
+# Allow Resource#non_image_extnames to be overridden by plugins [myles_b]
+
 * filter password fields in logs [chrissturm]
 
 * add *.ico to list of approved extensions for theme resources [myles_b]
